# NDA-Generator

./: .env.example  NDA_Exemple.docx  NDA_Playbook.xlsx  NDA_revu.docx  README.md  pyproject.toml
nda_generator/: __init__.py  __main__.py  cli.py  document_context.py  docx_preview_html.py  issue_comments.py  llm_review.py  llm_summary.py  operations_validate.py  ops_logging.py  paragraph_refs.py  pipeline.py  playbook.py  web.py
nda_generator/static/: app.js  index.html  styles.css
